skill-icons visibility issue fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -288,13 +288,16 @@ h2{
 }
 
 .skill-card {
-    background-color: #292929;
-    padding: 20px;
-    border-radius: 10px;
-    width: 160px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-    text-align: center;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  width: 150px;
+  height: 150px;
+  text-align: center;
 }
 
 .skill-card:hover {
@@ -304,7 +307,9 @@ h2{
 
 .skill-card img {
     width: 50px;
-    margin-bottom: 15px;
+  height: 50px;
+  margin-bottom: 10px;
+  object-fit: contain;
 }
 
 
